--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,25 @@
 .next{
     bottom: 0;
 }
+
+.thumbs{
+    height: 400px;
+    position: relative;
+    background-color: black;
+}
+
+.thumb{
+    height: calc(400px / 5);
+    opacity: 0.5;
+}
+
+.thumb.active{
+    opacity: 1;
+    border: 2px solid #ccc;
+}
+
+.thumb img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
